# polap

./: .gitconfig  .gitignore  .gitmodules  Cargo.toml  INSTALL  LICENSE  Makefile  README.md
crates/polap/: Cargo.toml
crates/polap/src/: cli.rs  fastq.rs  logging.rs  main.rs  man.rs  plugins.rs  preset.rs  profiles.rs  runner.rs  units.rs
crates/polap/src/subcommands/: assemble.rs  mod.rs  polish.rs  prepare_polishing.rs  preset.rs  test.rs
src/: 1.sh  INSTALL  LOG  Makefile  Makefile.update  README.md  TODO  arg1.sh  bolap  bolap.sh  cmd-parsing.sh  cmd.sh  contig-seeds.R  draw-carex-pseudochinensis-mtdna.R  main.sh  ncbitools  p1.sh  polap  polap-batch-v0.sh  polap-batch-v2.sh  polap-build.sh  polap-command-completion.sh  polap-conda-environment.yaml  polap-constants.sh  polap-data-add-menu.sh  polap-data-aflye  polap-data-cflye  polap-data-cflye.sh  polap-data-dflye  polap-data-dflye.sh  polap-data-hifi  polap-data-menu.sh  polap-data-read  polap-data-taxon  polap-data-taxon.sh  polap-data-v0.sh  polap-data-v1.csv  polap-data-v1.sh  polap-data-v2-later.csv  polap-data-v2-suptable1_footnote.tex  (+209 more)
src/backup/: arg2.sh  p.sh  polap-20240327.sh  polap-20240428  polap-20240814.sh  polap1-00.sh  polap1-02.sh  run-polap-annotation  run-polap-common.sh  run-polap-confirm-genes.sh  run-polap-confirm-genes2.R  run-polap-draw.R  run-polap-gpt  run-polap-mtdna-carex-pseudochinensis-01.sh  run-polap-mtdna-carex-pseudochinensis-03.sh  run-polap-mtdna-carex-pseudochinensis-04.sh  run-polap-ncbi  run-polap-tree2.R  (+10 more)
test/: README  l.fq  mt.0.fa  mt.0.fasta  run  s1.fq  s2.fq
(+1311 files in other folders)
