# Version: v0.1.0
[package]
name = "polap"
version = "0.1.1"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive", "env"] }
clap_complete = "4.5"
console = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "chrono"] }
tracing-appender = "0.2"
time = { version = "0.3", features = ["formatting"] }
dirs = "5"
atty = "0.2"
shell-words = "1"
regex = "1"
which = "6"
humantime = "2"
walkdir = "2"
thiserror = "1"
num_cpus = "1"
color-eyre = "0.6"
tempfile = "3"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
